WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36360
Double clicking page's first editable inline element cannot select a word.
https://bugs.webkit.org/show_bug.cgi?id=36360
Summary
Double clicking page's first editable inline element cannot select a word.
Hajime Morrita
Reported
2010-03-19 05:18:51 PDT
Double clicking certain type of inline element with contentEditable cannot select a clicked word. See attached test-case for concrete example. This one is similar to
Bug 36359
. But Its cause would be slightly different. So I file this one separately. reproduce: - open the test html - double-click "here" text expected: - selection range covers "here" actual: - the caret moves to the head of "here", with empty range.
Attachments
test case
(202 bytes, text/html)
2010-03-19 05:24 PDT
,
Hajime Morrita
no flags
Details
patch v0
(5.17 KB, patch)
2010-03-19 06:37 PDT
,
Hajime Morrita
no flags
Details
Formatted Diff
Diff
took the feedback
(8.41 KB, patch)
2010-05-20 22:50 PDT
,
Hajime Morrita
no flags
Details
Formatted Diff
Diff
patch v7
(15.78 KB, patch)
2010-05-27 01:35 PDT
,
Hajime Morrita
no flags
Details
Formatted Diff
Diff
Patch
(16.94 KB, patch)
2010-08-05 23:27 PDT
,
Hajime Morrita
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Hajime Morrita
Comment 1
2010-03-19 05:24:03 PDT
Created
attachment 51145
[details]
test case
Hajime Morrita
Comment 2
2010-03-19 06:37:05 PDT
Created
attachment 51152
[details]
patch v0
Hajime Morrita
Comment 3
2010-03-22 18:26:06 PDT
Comment on
attachment 51152
[details]
patch v0 This patch depends
Bug 36359
. So I'll cancel this one at now.
Hajime Morrita
Comment 4
2010-05-20 22:50:32 PDT
Created
attachment 56672
[details]
took the feedback
Hajime Morrita
Comment 5
2010-05-20 22:52:11 PDT
Comment on
attachment 56672
[details]
took the feedback The patch was uploaded to wrong bug. So I'll cancel review request.
Hajime Morrita
Comment 6
2010-05-27 01:35:55 PDT
Created
attachment 57209
[details]
patch v7
Hajime Morrita
Comment 7
2010-05-27 01:36:48 PDT
Comment on
attachment 57209
[details]
patch v7 wrong bug id. canceled.
WebKit Review Bot
Comment 8
2010-05-27 01:37:14 PDT
Attachment 57209
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style', '--no-squash']" exit_code: 1 WebCore/editing/TextIterator.cpp:1151: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 1 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Hajime Morrita
Comment 9
2010-08-05 23:27:44 PDT
Created
attachment 63697
[details]
Patch
Hajime Morrita
Comment 10
2010-08-05 23:28:48 PDT
Comment on
attachment 63697
[details]
Patch wrong bug id again...
Hajime Morrita
Comment 11
2010-08-09 04:40:27 PDT
Committed
r64974
: <
http://trac.webkit.org/changeset/64974
>
Daniel Bates
Comment 12
2011-04-24 23:47:21 PDT
***
Bug 34534
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug