WebCore/dom/Position.h
@@ -138,6 +138,7 @@ public:
 
     // Returns true if the visually equivalent positions around have different editability
     bool atEditingBoundary() const;
+    Node* parentEditingBoundary() const;
     
     bool atStartOfTree() const;
     bool atEndOfTree() const;
